--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div id="end-results" class="text-center container hidden mt-5">
         <div class="row mb-5 d-flex justify-content-center">
             <div class="col-12 h1 mt-3" id="score"></div>
-            <div class="col-12 mt-5 h3 text-center" >Bad Words: </div>
+            <div class="col-12 mt-5 h3 text-center" >Missed cards: </div>
             <div class="col-8 mt-3  h5" id="bad-words"></div>
             <div class="row">
                 <div class="col-6 mt-5"><button class="btn btn-primary text-white submit-btn w-100 py-3" onclick="onReplay()">Play Again</button></div>
