--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
             <div id="English-Word" class="col-12 my-3 h2"></div>
             <div class="col-12 mt-2">
-                <img id="quiz-image" class="img-fluid " src="" alt="Image">
+                <img id="quiz-image" class="img-fluid " src="" alt="">
             </div>
              
             <div class="col-lg-6 col-12 mt-4"><input id="input" type="text" placeholder="" class="form-control "/> </div>
